--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 			</div>
 			<h2>SPY IN THE AMBER</h2>
 			<p>BY Manohar Mangolkar</p>
-			<button>Rs. 299</button>
+			<div class="btn">Rs. 299</div>
 		</div>
 		<div class="book">
 			<div class="image">
