--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 			</div>
 			<h2>SACRED GAMES</h2>
 			<p>by Vikram Chandra</p>
-			<button>Rs. 199</button>
+			<div class="btn">Rs. 199</div>
 		</div>
 		<div class="book">
 			<div class="image">
